// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hero renders 1`] = `
.c1 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding-left: 16px;
  padding-right: 16px;
  max-width: 768px;
}

.c0 {
  font-size: 28px;
  width: 100%;
  background-color: #0588cb;
  color: #f8f9fa;
  text-align: center;
}

@media screen and (min-width:32em) {
  .c1 {
    max-width: 1024px;
  }
}

@media screen and (min-width:48em) {
  .c1 {
    max-width: 1280px;
  }
}

<div
  class="c0"
  font-size="3"
>
  <div
    class="c1"
  />
</div>
`;

exports[`Hero renders with children 1`] = `
.c1 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding-left: 16px;
  padding-right: 16px;
  max-width: 768px;
}

.c0 {
  font-size: 28px;
  width: 100%;
  background-color: #0588cb;
  color: #f8f9fa;
  text-align: center;
}

@media screen and (min-width:32em) {
  .c1 {
    max-width: 1024px;
  }
}

@media screen and (min-width:48em) {
  .c1 {
    max-width: 1280px;
  }
}

<div
  class="c0"
  font-size="3"
>
  <div
    class="c1"
  >
    <div />
  </div>
</div>
`;
